add base templates for pages

--- a/Technopark_project/QA_project/templates/QA_project/index.html
+++ b/Technopark_project/QA_project/templates/QA_project/index.html
@@ -1,48 +1,13 @@
-<!doctype html>
-<html lang="en">
+{% extends 'QA_project/base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="../bootstrap/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" />
-</head>
+{% block content %}
+    <div class="d-flex align-items-center gap-2 mb-4">
+        <h1>New Questions</h1>
+        <a href="#">Hot Questions</a>
+    </div>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
-
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Ask</button>
-            </form>
-
-            <div class="d-flex gap-2 align-items-center">
-                <div>
-                    <img src="hello.jpg" class="img-thumbnail" alt="...">
-                </div>
-                <div class="content">
-                    <div class="content__name">Dr. Pepper</div>
-                    <div class="content__links">
-                        <a href="#">Settings</a>
-                        <a href="#">Log out</a>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </nav>
-
-    <main class="container mt-2">
-        <div class="row">
+    <div class="d-flex gap-3 flex-column">
             <section class="col vh-100">
-                <div class="d-flex align-items-center gap-2 mb-4">
-                    <h1>New Questions</h1>
-                    <a href="#">Hot Questions</a>
-                </div>
-
                 <articles class="d-flex gap-3 flex-column">
                     <div class="card">
                         <div class="card-body">
@@ -194,39 +159,14 @@
                 </articles>
             </section>
 
-            <aside class="col-3">
-
-                <section class="mb-3">
-                    <h3>Popular tags</h3>
-                    <div>
-                        <span class="badge rounded-pill text-bg-primary">Primary</span>
-                        <span class="badge rounded-pill text-bg-secondary">Secondary</span>
-                        <span class="badge rounded-pill text-bg-success">Success</span>
-                        <span class="badge rounded-pill text-bg-danger">Danger</span>
-                        <span class="badge rounded-pill text-bg-warning">Warning</span>
-                        <span class="badge rounded-pill text-bg-info">Info</span>
-                        <span class="badge rounded-pill text-bg-light">Light</span>
-                        <span class="badge rounded-pill text-bg-dark">Dark</span>
-                    </div>
-                </section>
-
-                <section>
-                    <h3>Best members</h3>
-                    <div>
-                        <a class="d-block" href="#">Member</a>
-                        <a class="d-block" href="#">Member</a>
-                        <a class="d-block" href="#">Member</a>
-                        <a class="d-block" href="#">Member</a>
-                        <a class="d-block" href="#">Member</a>
-                        <a class="d-block" href="#">Member</a>
-                        <a class="d-block" href="#">Member</a>
-                    </div>
-                </section>
-
-            </aside>
-        </div>
-    </main>
-    <script src="../bootstrap/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
-</body>
-
-</html>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+{% endblock %}
