--- a/Technopark_project/QA_project/templates/QA_project/base.html
+++ b/Technopark_project/QA_project/templates/QA_project/base.html
@@ -1,27 +1,29 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AskPupkin</title>
-    <link href="../../static/bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../static/css/styles.css" rel="stylesheet">
+    <title>Questioneer!</title>
+    <link href="{% static 'bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="/">AskPupkin</a>
+            <a class="navbar-brand" href="/">Questioneer!</a>
 
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Ask</button>
+                <input class="form-control me-2" type="search" placeholder="Enter keywords" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-
+            <button class="btn btn-outline-primary" type="submit">Ask question</button>
             <div class="d-flex gap-2 align-items-center">
                 <div>
-                    <img src="/static/images/hello.jpg" class="img-thumbnail" alt="...">
+                    <img src="{% static 'resources/pictures/avatar.jpeg' %}" class="img-thumbnail" alt="..." width="80" height="80">
                 </div>
                 <div class="content">
                     <div class="content__name">Dr. Pepper</div>
@@ -36,11 +38,12 @@
 
     <main class="container mt-2">
         <div class="row">
-            <section class="col">
-                {% block content %}{% endblock %}
+            <section class="col-md-8">
+                {% block content %}
+                {% endblock %}
             </section>
 
-            <aside class="col-3">
+            <aside class="col-md-4">
                 <section class="mb-3">
                     <h3>Popular tags</h3>
                     <div>
@@ -68,7 +71,8 @@
             </aside>
         </div>
     </main>
-    <script src="../../static/bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css"></script>
+
+    <script src="{% static 'bootstrap/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
