--- a/Technopark_project/QA_project/templates/QA_project/base.html
+++ b/Technopark_project/QA_project/templates/QA_project/base.html
@@ -9,12 +9,16 @@
     <title>Questioneer!</title>
     <link href="{% static 'bootstrap/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link rel="icon" href="{% static 'resources/pictures/icon.jpeg' %}">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d9abdb;">
         <div class="container">
-            <a class="navbar-brand" href="/">Questioneer!</a>
+            <a class="navbar-brand" href="/">
+                <img src="{% static 'resources/pictures/icon.jpeg' %}" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                Questioneer
+            </a>
 
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Enter keywords" aria-label="Search">
@@ -28,8 +32,8 @@
                 <div class="content">
                     <div class="content__name">Dr. Pepper</div>
                     <div class="content__links">
-                        <a href="#">Settings</a>
-                        <a href="#">Log out</a>
+                        <a href="/settings">Settings</a>
+                        <a href="/index_logout">Log out</a>
                     </div>
                 </div>
             </div>
