--- a/Technopark_project/QA_project/templates/QA_project/login.html
+++ b/Technopark_project/QA_project/templates/QA_project/login.html
@@ -1,18 +1,34 @@
-{% extends 'QA_project/base.html' %}
+{% extends 'QA_project/base_not_auth.html' %}
 
 {% block content %}
     <h1>Login</h1>
-    <form method="post">
-        {% csrf_token %}
+    <form id="login-form">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+            <div id="username-error" style="color: red; display: none;">Демонстрация сообщения об ошибке, попробуйте "username"</div>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
     </form>
-    <p class="mt-3">Don't have an account? <a href="#">Sign Up</a></p>
+
+    <button onclick="validateAndRedirect()" class="btn btn-primary">Login</button>
+
+    <p class="mt-3">Don't have an account? <a href="/signup">Sign Up</a></p>
+
+    <script>
+        function validateAndRedirect() {
+            const username = document.getElementById('username').value;
+            const errorElement = document.getElementById('username-error');
+
+            if (username.toLowerCase() === 'username') {
+                errorElement.style.display = 'none';
+                window.location.href = "/";
+            } else {
+                errorElement.style.display = 'block';
+            }
+        }
+    </script>
 {% endblock %}
