--- a/Technopark_project/QA_project/templates/QA_project/tag.html
+++ b/Technopark_project/QA_project/templates/QA_project/tag.html
@@ -5,6 +5,13 @@
         <h1 class="mb-0">New Questions</h1>
         <a href="#" class="ms-auto">Hot Questions</a>
     </div>
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="d-flex align-items-center">
+                    <h2 class="mb-0 me-3">Tag: primary</h2>
+                </div>
+            </div>
+        </div>
     <div class="d-flex gap-3 flex-column">
             <section class="col vh-100">
                 <div class="d-flex gap-3 flex-column">
@@ -41,7 +48,7 @@
                             </div>
                             <div class="col">
                                 <span>Tags:</span>
-                                <a href ="/tag"><span class="badge rounded-pill text-bg-primary">Primary</span></a>
+                                <span class="badge rounded-pill text-bg-primary">Primary</span>
                                 <span class="badge rounded-pill text-bg-secondary">Secondary</span>
                             </div>
                         </div>
@@ -80,7 +87,7 @@
                             </div>
                             <div class="col">
                                 <span>Tags:</span>
-                                <a href ="/tag"><span class="badge rounded-pill text-bg-primary">Primary</span></a>
+                                <span class="badge rounded-pill text-bg-primary">Primary</span>
                                 <span class="badge rounded-pill text-bg-secondary">Secondary</span>
                             </div>
                         </div>
@@ -117,7 +124,7 @@
                             </div>
                             <div class="col">
                                 <span>Tags:</span>
-                                <a href ="/tag"><span class="badge rounded-pill text-bg-primary">Primary</span></a>
+                                <span class="badge rounded-pill text-bg-primary">Primary</span>
                                 <span class="badge rounded-pill text-bg-secondary">Secondary</span>
                             </div>
                         </div>
@@ -154,7 +161,7 @@
                             </div>
                             <div class="col">
                                 <span>Tags:</span>
-                                <a href ="/tag"><span class="badge rounded-pill text-bg-primary">Primary</span></a>
+                                <span class="badge rounded-pill text-bg-primary">Primary</span>
                                 <span class="badge rounded-pill text-bg-secondary">Secondary</span>
                             </div>
                         </div>
