--- a/Technopark_project/QA_project/templates/QA_project/login.html
+++ b/Technopark_project/QA_project/templates/QA_project/login.html
@@ -1,34 +1,45 @@
-{% extends 'QA_project/base_not_auth.html' %}
+{% extends 'QA_project/base_auth.html' %}
 
-{% block content %}
-    <h1>Login</h1>
-    <form id="login-form">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
-            <div id="username-error" style="color: red; display: none;">Демонстрация сообщения об ошибке, попробуйте "username"</div>
+{% block auth_title %}Login{% endblock %}
+
+{% block auth_form %}
+<form id="login-form">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" name="username"
+               placeholder="Enter username" required>
+        <div id="username-error" class="invalid-feedback" style="display: none;">
+            Демонстрация сообщения об ошибке, попробуйте "username"
         </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
-        </div>
-    </form>
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password"
+               placeholder="Enter password" required>
+    </div>
+    <button type="button" onclick="validateAndRedirect()"
+            class="btn btn-primary btn-block mt-4">
+        Login
+    </button>
+</form>
+{% endblock %}
 
-    <button onclick="validateAndRedirect()" class="btn btn-primary">Login</button>
+{% block auth_links %}
+<p>Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+{% endblock %}
 
-    <p class="mt-3">Don't have an account? <a href="/signup">Sign Up</a></p>
+{% block scripts %}
+<script>
+    function validateAndRedirect() {
+        const username = document.getElementById('username').value;
+        const errorElement = document.getElementById('username-error');
 
-    <script>
-        function validateAndRedirect() {
-            const username = document.getElementById('username').value;
-            const errorElement = document.getElementById('username-error');
-
-            if (username.toLowerCase() === 'username') {
-                errorElement.style.display = 'none';
-                window.location.href = "/";
-            } else {
-                errorElement.style.display = 'block';
-            }
+        if (username.toLowerCase() === 'username') {
+            errorElement.style.display = 'none';
+            window.location.href = "{% url 'index' %}";
+        } else {
+            errorElement.style.display = 'block';
         }
-    </script>
+    }
+</script>
 {% endblock %}
