--- a/Technopark_project/QA_project/templates/QA_project/hot.html
+++ b/Technopark_project/QA_project/templates/QA_project/hot.html
@@ -10,10 +10,10 @@
     </div>
 
     <div class="d-flex gap-3 flex-column">
-        {% for question in questions.object_list %}
+        {% for question in page.object_list %}
             {% include 'QA_project/question_card.html' %}
         {% endfor %}
 
-        {% include 'QA_project/pagination.html' with page=questions %}
+        {% include 'QA_project/pagination.html' with page=page %}
     </div>
 {% endblock %}
