--- a/Technopark_project/QA_project/templates/QA_project/base_auth.html
+++ b/Technopark_project/QA_project/templates/QA_project/base_auth.html
@@ -1,22 +1,15 @@
-{% extends 'QA_project/base.html' %}
 {% load static %}
-
-{% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <h2 class="card-title text-center mb-4">{% block auth_title %}{% endblock %}</h2>
-                
-                {% block auth_form %}
-                {% endblock %}
-                
-                <div class="text-center mt-3">
-                    {% block auth_links %}
-                    {% endblock %}
-                </div>
-            </div>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block auth_title %}Questioneer{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+</head>
+<body>
+    <div class="container mt-5">
+        {% block auth_form %}{% endblock %}
+        {% block auth_links %}{% endblock %}
     </div>
-</div>
-{% endblock %}
+</body>
+</html>
