--- a/Technopark_project/QA_project/templates/QA_project/settings.html
+++ b/Technopark_project/QA_project/templates/QA_project/settings.html
@@ -7,24 +7,7 @@
                 <h1>Settings: Dr. Pepper</h1>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="form-group mb-3">
-                        <label for="login">Login</label>
-                        <input type="text" class="form-control" id="login" name="login" value="marivan" readonly>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" value="exeample@mail.ru">
-                    </div>
-                    <div class="form-group mb-3">
-                        <label for="nickname">NickName</label>
-                        <input type="text" class="form-control" id="nickname" name="nickname" value="Nickname">
-                    </div>
-                    <div class="form-group mb-3">
-                        <label for="avatar">Upload avatar</label>
-                        <div class="d-flex align-items-center">
-                            <input type="file" class="form-control-file" id="avatar" name="avatar">
-                        </div>
-                    </div>
+                    {{ form.as_p }}
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
             </div>
